welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:2: error: not found: value int
int x = 0;
^RunHalf:3: error: not found: value int
int b = 0;
^RunHalf:4: error: not found: value b
while(2*b != x + 1)
        ^RunHalf:8: error: not found: value b
		b = b + 1;
                ^RunHalf:10: error: not found: value x
		x = x + 1;
                ^