welcome.lessons.welcome.variables.RunHalf.scala.code
int x = 0;
int b = 0;
while(2*b != x + 1)
{
	avance();
	if(estSurBiscuit())
		b = b + 1;
	if(estSurOrange())
		x = x + 1;
}